style: Fix overflow-x

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,8 @@
+html {
+  overflow-x: hidden !important;
+}
 body {
+  overflow-x: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,7 +10,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
-  overflow-x: hidden;
 }
 
 code {
